# pizza-generator-kafka-service

./: README.md  consumer.py  producer.py  pyproject.toml  services.sh  setup.sh
src/chat_service/: README.md  pyproject.toml
src/chat_service/backend/: ws_server.py
src/chat_service/frontend/: chat.css  chat.js  index.html
src/cheese_service/: config.properties  main.py  pyproject.toml
src/meat_service/: config.properties  main.py  pyproject.toml
src/movie_service/: main.py  pyproject.toml
src/movie_service/apis/: base.py  movie_api.py  utils.py
src/movie_service/configs/: config.properties
src/pizza_service/: README.md  app.py  objects.py  pyproject.toml  service.py
src/pizza_service/alembic/: env.py
src/pizza_service/alembic/versions/: ad9e1c19f06e_create_order_table.py  d5c08b2d166f_first.py  ee8bb3d1c65f_create_order.py
src/pizza_service/apis/: base.py  helpers.py  movie_api.py  pizza_img_api.py  utils.py
src/pizza_service/backend/: base.py  helpers.py  pizza_img_api.py  schemas.py  utils.py
src/pizza_service/backend/kafka/: objects.py  service.py
src/pizza_service/configs/: config.properties  settings.py
src/pizza_service/db/: models.py  session.py
src/pizza_service/frontend/: movie_api.html  pizza_service.css  pizza_service.html  pizza_service.js
src/pizza_service/helpers/: external_api.py  utils.py
src/pizza_service/kafka/: objects.py  service.py
src/pizza_service/templates/: movie_api.py  pizza_api.py  pizza_service.py
src/reporter/: app.py  config.properties  objects.py  pyproject.toml  service.py
src/sauce_service/: app.py  config.properties  main.py  pyproject.toml
src/veggie_service/: config.properties  main.py  pyproject.toml
