[tool.poetry]
name = "movie-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.6.0"
fastapi = "^0.115.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
