[tool.poetry]
name = "pizza-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.6.0"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
websockets = "^13.1"
alembic = "^1.14.0"
aiomysql = "^0.2.0"
cryptography = "^43.0.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
