[tool.poetry]
name = "pizza-service"
version = "0.1.0"
description = ""
authors = ["Dimcheck <dfarinyak@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.11"
fastapi = "^0.115.5"
httpx = "^0.28.0"
asyncmy = "^0.2.9"
websockets = "^14.1"
uvicorn = "^0.32.1"
cryptography = "^44.0.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
aiokafka = "^0.12.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
